fix compilation error